# crimelapse

./: .gitattributes  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/resources/: glyphconfig.json
src-tauri/src/: compute.rs  ffmpeg.rs  lib.rs  main.rs
src-tauri/src/compute/: export.rs  glyph.rs  mod.rs  timelapse.rs  timeline.rs  workers.rs
src-tauri/src/compute/glyph/: annotate.rs  organize.rs
src/components/: FileFolderInput.vue  FolderInput.vue  ProgressPanel.vue
src/pages/: ComputePage.vue  MapPage.vue
