[package]
name = "crimelapse"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "crimelapse_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
# default = ["annotated-glyph-frames", "organized-glyph-bitmaps"]
annotated-glyph-frames = []
organized-glyph-bitmaps = []

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
glob = "0.3.3"
anyhow = "1.0.100"
chrono = "0.4.42"
chrono-tz = "0.10.4"
cfg-if = "1.0.3"
image = "0.25.8"
regex = "1.11.3"
